2003-09-15  Paul Eggert  <eggert@twinsun.com>

	* lib/getndelim2.c (getndelim2): Don't trash errno when a read
	fails, so that the caller gets the proper errno.

	* readutmp.c (read_utmp): Likewise.
	Check for fstat error.  Close stream and free storage
	when failing.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* fwriteerror.h: New file.
	* fwriteerror.c: New file.

2003-09-14  Jim Meyering  <jim@meyering.net>

	* getloadavg.c: Correct cpp indentation.
	* strdup.c: Likewise.
	* vasnprintf.c: Likewise.

2003-09-12  Paul Eggert  <eggert@twinsun.com>

	* argmatch.c, fatal.c, xgethostname.c, xmalloc.c: Include exit.h.
	* obstack.c [!defined _LIBC]: Likewise.
	* argmatch.c (EXIT_FAILURE): Remove; now done by exit.h
	* exitfail.c, fatal.c, xgethostname.c, xmalloc.c: Likewise.
	* exitfail.c: Don't include stdlib.h; no longer needed.

	More changes to assume C89 or better.

	* error.c (error_tail): Assume vprintf.

	* argmatch.c (getenv): Remove decl.
	* progreloc.c (get_full_program_name): Define via prototype.
	* setenv.c (clearenv): Likewise.
	* stpncpy.c: Do not include <string.h> or <sys/types.h>; not
	needed.
	* strdup.c: Include <stdlib.h>, <string.h> unconditionally.
	(malloc, memcpy): Remove decls.
	* strftime.c (HAVE_LIMITS_H, STDC_HEADERS) [defined _LIBC]: Remove.
	(HAVE_MEMCPY) [defined emacs && !defined HAVE_BCOPY]: Remove.
	Include <limits.h>, <stddef.h>, <stdlib.h>, <string.h> unconditionally.
	(memcpy): Remove macro.
	(MEMCPY) [!defined COMPILE_WIDE]: Define to memcpy unconditionally.
	(__P): Remove.  All uses removed.
	(PTR): Remove.  All uses changed to void *.
	(CHAR_BIT, NULL): Remove.
	(spaces, zeros, memset_space, memset_zero)
	[!defined memset && !defined HAVE_MEMSET && !defined _LIBC]:
	Remove.
	(LOCALE_PARAM, LOCALE_PARAM_DECL): Remove.
	(memcpy_lowcase, memcpy_uppcase, tm_diff, iso_week_days):
	Define with prototype.
	Remove now-unnecessary prototype decl.
	(extra_args_spec): Assume ANSI C.  All uses changed.
	(extra_args_spec_iso): Remove.